--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
+    "gsap": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-gsap": "^2.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
+    "react-scrollmagic": "^2.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
